--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,6 @@
-/nbproject/genfiles.properties
-/nbproject/project.properties
-/nbproject/jfx-impl.xml
+/build/
+/dist/
+/nbproject/
+/test/
 /manifest.mf
 /build.xml
-/nbproject/project.xml
-/nbproject/build-impl.xml
-/nbproject/configs/Run_in_Browser.properties
-/nbproject/configs/Run_as_WebStart.properties
